--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,5 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 /tests/results/
 
 # untuk kemudahanmu
-application/config/database.php
+# application/config/database.php
+.env.development
